	priority.

        The defaults have been increased to 6M and 250k.

    o   zip files can be used for storing help and example files. See
	the help files for "help" and "example" for details.

    o   New submission method "none" (for not sending email) in
	bug.report().

    o	`R CMD check' can now also be used for installed packages without
	the corresponding sources.


BUG FIXES

    o   ifelse() now evaluates yes/no only if needed

    o   PROTECT'ed some memory in NewExtractNames that was getting overwritten
        during garbage collection.

    o	Crossing factors (`:') works again.

    o   terms.formula used to choke on terms more than 60 characters long

    o	is.nan() should now work correctly on new/old-style lists.

    o	x[[i]] did not work correctly for negative subscripts i.

    o   as.list() didn't work for expressions

    o   x[[i]] <- quote(a) (x generic vector) didn't work

    o   for method functions: many argument name changes, add ... where
	needed, for consistency with the generic function.

    o   example() will allow (again) aliased topic names. 

    o   HTML help file conversions will find hyperlinks in the main 
	library as well as the current library. Links containing `<'
        or `>' now work properly.

    o   Rdconv conversion of \section{}{}s to Sd corrected.

    o   ppois rounded non-integer `q', should truncate.

    o   pnbinom was wrong for non-integer `q'.

    o   dbinom, dgeom, dnbinom, dpois give 0 with a warning for
	non-integer arguments.

    o   load / save / data allow unlimited string sizes.

    o   strsplit() allows unlimited string size.

    o	eigen() now should work (again) in all cases.

    o   is.nan() fixed to work (again) in architectures with 
	"unspecified" internal isnan().


		CHANGES IN R VERSION 0.64.0

NEW FEATURES

    o   Files BUGS and FAQ are now included with distribution and
	various "front matter" files have been cleaned up.

    o	readline has now an argument  prompt = ""
