@@ -680,7 +680,7 @@ static SEXP evalseq(SEXP expr, SEXP rho, int forcelocal, SEXP tmploc)
 	UNPROTECT(4);
 	return CONS(nval, val);
     }
-    else error("invalid (Non-language) left side of assignment\n");
+    else error("Target of assignment expands to non-language object\n");
     return R_NilValue;	/*NOTREACHED*/
 }
 
